--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -50,7 +50,7 @@
       [nzTotal]="totalTodos()"
       [nzPageSize]="pageSize"
       (nzPageIndexChange)="onPageChange($event)"
-      class="bg-white shadow p-2 rounded"
+      class="p-2"
     ></nz-pagination>
   </div>
 </div>
